AppMenu: fix blurry icons

--- a/extension/stylesheet.css
+++ b/extension/stylesheet.css
@@ -102,7 +102,7 @@
 .popup-menu-arrow,
 .rocketbar__popup-menu
 .popup-menu-icon {
-    icon-size: 1em !important;
+    icon-size: 1.1em !important;
 }
 .rocketbar__popup-menu
 .slider {
